force-app/main/default/objects/Cargill_Leap_App_Config__c/Cargill_Leap_App_Config__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Cargill Leap App Config</label>
</CustomObject>