force-app/main/default/objects/Cargill_Leap_App_Config__c/fields/AccountActivityDefaultDisplayNummber__c.field-meta.xml
<CustomField>
    <fullName>AccountActivityDefaultDisplayNummber__c</fullName>
    <label>AccountActivityDefaultDisplayNummber</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>