force-app/main/default/objects/Cargill_Leap_App_Config__c/fields/AccountActivityObjectList__c.field-meta.xml
<CustomField>
    <fullName>AccountActivityObjectList__c</fullName>
    <label>AccountActivityObjectList</label>
    <type>TextArea</type>
</CustomField>