force-app/main/default/objects/Cargill_Leap_App_Config__c/fields/AccountHierarchyLimit__c.field-meta.xml
<CustomField>
    <fullName>AccountHierarchyLimit__c</fullName>
    <description>This field is created to determine the number of levels the accounts should be queried in the hierarchy  during the account plan creation process</description>
    <label>AccountHierarchyLimit</label>
    <length>2</length>
    <type>Text</type>
</CustomField>