force-app/main/default/objects/Cargill_Leap_App_Config__c/fields/ListViewRecordLimit__c.field-meta.xml
<CustomField>
    <fullName>ListViewRecordLimit__c</fullName>
    <description>This field is created for setting the Limit for the pagination of list views for account plan creation process</description>
    <label>ListViewRecordLimit</label>
    <length>3</length>
    <type>Text</type>
</CustomField>