force-app/main/default/objects/Cargill_Leap_App_Config__c/fields/Status_Filter_List__c.field-meta.xml
<CustomField>
    <fullName>Status_Filter_List__c</fullName>
    <label>Status Filter List</label>
    <type>TextArea</type>
</CustomField>